fix images on mobile #3

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1230,6 +1230,18 @@ footer {
 		padding: 15px;
 	}
 
+	.kg-image-card.kg-width-wide {
+		position: relative;
+		width: 100%;
+		left:0%;
+	}
+	
+	.kg-image-card.kg-width-full {
+		width: 100%;
+		left:0%;
+		position: relative;
+	}
+
 
 }
 
@@ -1380,6 +1392,19 @@ footer {
 
 	iframe {
 		padding: 25px;
+	}
+
+	
+	.kg-image-card.kg-width-wide {
+		position: relative;
+		width: 100%;
+		left:0%;
+	}
+	
+	.kg-image-card.kg-width-full {
+		width: 100%;
+		position: relative;
+		left:0%;
 	}
 
 }
